[package]
name = "huge-json"
description = "OMAGAD such a JSON parser ! So fast !"
version = "0.1.0"
authors = ["Nicolas Kirchner <kirchner.nic@gmail.com>"]
edition = "2018"
license = "Unlicense"
readme = "README.md"

[dependencies]
combine = "3.8"
either = "1.5"
regex = "1.2"
structopt = "0.2"
unicode_reader = "1.0"