[package]
name = "sjq"
description = "OMAGAD such a JSON parser ! So fast !"
repository = "https://github.com/kompass/sjq"
version = "0.1.4"
authors = ["Nicolas Kirchner <kirchner.nic@gmail.com>"]
edition = "2018"
license = "Unlicense"
readme = "README.md"

[dependencies]
combine = "3.8"
either = "1.5"
exitfailure = "0.5"
failure = "0.1"
lexical = "4.0"
once_cell = "0.2"
regex = "1.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = { version = "0.3.2", features = ["wrap_help", "color", "suggestions"] }
unicode_reader = "1.0"
unicode-normalization = "0.1"

[dev-dependencies]
assert_cmd = "0.11"
predicates = "1.0.1"
assert_fs = "0.11"